corrections mineures, bug persistant hebergement version mobile positionnement du lien sur carte

--- a/css/P2-1_style_aside.css
+++ b/css/P2-1_style_aside.css
@@ -36,8 +36,8 @@
 .b-populaire__card {
     display: flex;
     width: 93%;
-    height: 200px;
-    margin: 20px 0;
+    height: 180px;
+    margin: 10px 0;
     background-color: white;
     padding-right: 0px;
     padding-left: 2%;
